# cpp-opencl-wrapper

./: .gitignore  CMakeLists.txt  README.md
include/: camera_controller.hpp  denoiser.hpp  double_buffer.hpp  event_manager.hpp  fly_controller.hpp  fps_controller.hpp  losvo.hpp  lsvo.hpp  lsvo_utils.hpp  ocl_raytracer.hpp  ocl_wrapper.hpp  scene.hpp  svo.hpp  svo_builder.hpp  utils.hpp  volumetric.hpp
res/Sounds/: fall.flac  jump.flac  step1.flac  step2.flac  step3.flac  step4.flac
src/: albedo.cl  bilateral_blur.cl  bilateral_blur_diso.cl  blur.cl  combinator.cl  image_3d.cl  image_output.cl  julia.cl  kernel.cu  lighting.cl  lsvo_utils.cpp  main.cpp  median.cl  mutator.cl  ocl_wrapper.cpp  rand.cl  reprojection.cl  shadow.cl  sound_player.cpp  svo_builder.cpp  temporal.cl  test.cl  utils.cpp  voxel.cl  voxel_raycaster.cl
